web-platform-tests/html/rendering/dimension-attributes.html is failing when table width is set to 0px https://bugs.webkit.org/show_bug.cgi?id=235267

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/html/rendering/dimension-attributes-expected.txt:

Source/WebCore:

This patch is based on the following Blink commit:
  https://chromium-review.googlesource.com/c/chromium/src/+/2458587

This only applies to width (not height) - see:
  https://wpt.fyi/results/html/rendering/dimension-attributes.html?label=master&label=experimental&aligned&q=dimension-attributes

See also: https://drafts.csswg.org/css-tables-3/#mapping

* html/HTMLElement.cpp:
(WebCore::HTMLElement::addHTMLLengthToStyle):
* html/HTMLElement.h:
* html/HTMLTableElement.cpp:
(WebCore::HTMLTableElement::collectPresentationalHintsForAttribute):



Canonical link: https://commits.webkit.org/246081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288061 268f45cc-cd09-0410-ab3c-d52691b4dbfc